# meta-master-interface

./: .editorconfig  .prettierrc.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.run/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src-w/api/: Cargo.toml
src-tauri/src-w/api/src/: lib.rs
src-tauri/src-w/api/src/http/: dl_site.rs  mod.rs
src-tauri/src-w/common/: Cargo.toml
src-tauri/src-w/common/src/: lib.rs
src-tauri/src-w/core/: Cargo.toml
src-tauri/src-w/core/src/: lib.rs
src-tauri/src-w/core/src/data/: library.rs  metadata.rs
src-tauri/src-w/core/src/util/: compress.rs  config.rs  mod.rs  path_ext.rs
src-tauri/src/command/: mod.rs
src/api/: command.ts  file-dialog.ts  types.ts  util.ts
src/assets/: main.scss
src/layout/: BaseLayout.vue
src/layout/comp/: BaseSideDrawer.vue
src/pages/dashboard/: define.ts  index.vue  store.ts
src/pages/dashboard/comp/: DashboardUpdate.vue
src/pages/dashboard/script/: useTable.ts  useUpdate.ts
src/pages/settings/: index.vue
src/router/: index.ts  routes.ts
src/stores/: global.ts  index.ts
