[workspace]
members = ["src-w/api", "src-w/common", "src-w/core"]

[workspace.package]
description = "Metadata Master Interface"
version = "1.1.0"
authors = ["Rhynia <rhynia_v@outlook.com>"]
license = "GPL-3"
edition = "2024"

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[package]
name = "mmi"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "mmi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
m-common = { path = "src-w/common" }
m-core = { path = "src-w/core" }
m-api = { path = "src-w/api" }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log.workspace = true
serde.workspace = true
serde_json = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-pinia = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
