[package]
name = "m-core"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
m-api = { path = "../api" }
log.workspace = true
serde.workspace = true
toml = "0.8"
bson = "2"
redb = "2"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
derive_builder = "0.20"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
const_format = "0.2"
fs_extra = "1"
walkdir = "2.5.0"
